--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> <!-- JQuery -->
-    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script> <!-- JQuery Flip Transition -->
-    <script src="index.js"></script>
-    <link rel="stylesheet" type="text/css" href="index.css">
-  </head>
+
+<head>
+  <!-- JQuery -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- JQuery Flip Transition -->
+  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+  <script src="index.js"></script>
+  <link rel="stylesheet" type="text/css" href="index.css">
+  <title> Calc BC Flash Cards </title>
+</head>
+
+<body>
   <div id="card">
     <div class="front">
-      Front content
+      <span>Front content</span>
     </div>
     <div class="back">
-      Back content
+      <span>Back content</span>
     </div>
   </div>
+</body>
+
 </html>
