Added two more cards and added calc equations.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <!-- JQuery -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- JQuery Flip Transition -->
-  <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
-  <script src="index.js"></script>
-  <link rel="stylesheet" type="text/css" href="index.css">
-  <title> Calc BC Flash Cards </title>
-</head>
+  <head>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- JQuery Flip Transition -->
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+    <script src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title> Calc BC Flash Cards </title>
+  </head>
 
-<body>
-  <div id="card">
-    <div class="front">
-      <span>Front content</span>
+  <body>
+
+    <div class="card">
+      <div class="front">
+        <img src="cosx_front.png" alt="d/dx(cosx)">
+      </div>
+      <div class="back">
+        <img src="cosx_back.png" alt="-sinx">
+      </div>
     </div>
-    <div class="back">
-      <span>Back content</span>
+    <br>
+    <div class="card">
+      <div class="front">
+        <img src="sinx_front.png" alt="d/dx(sinx)">
+      </div>
+      <div class="back">
+        <img src="sinx_back.png" alt="cosx">
+      </div>
     </div>
-  </div>
-</body>
+    <br>
+    <div class="card">
+      <div class="front">
+        <img src="power_rule_front.png" alt="Power Rule">
+      </div>
+      <div class="back">
+        <img src="power_rule_back.png" alt="Power Rule">
+      </div>
+    </div>
+
+  </body>
 
 </html>
