Put cards into columns

--- a/index.html
+++ b/index.html
@@ -12,34 +12,44 @@
   </head>
 
   <body>
+    <div class="left-column">
+      <div class="card">
+        <div class="front">
+          <img src="cosx_front.png" alt="d/dx(cosx)">
+        </div>
+        <div class="back">
+          <img src="cosx_back.png" alt="-sinx">
+        </div>
+      </div>
 
-    <div class="card">
-      <div class="front">
-        <img src="cosx_front.png" alt="d/dx(cosx)">
-      </div>
-      <div class="back">
-        <img src="cosx_back.png" alt="-sinx">
-      </div>
-    </div>
-    <br>
-    <div class="card">
-      <div class="front">
-        <img src="sinx_front.png" alt="d/dx(sinx)">
-      </div>
-      <div class="back">
-        <img src="sinx_back.png" alt="cosx">
-      </div>
-    </div>
-    <br>
-    <div class="card">
-      <div class="front">
-        <img src="power_rule_front.png" alt="Power Rule">
-      </div>
-      <div class="back">
-        <img src="power_rule_back.png" alt="Power Rule">
+      <div class="card">
+        <div class="front">
+          <img src="sinx_front.png" alt="d/dx(sinx)">
+        </div>
+        <div class="back">
+          <img src="sinx_back.png" alt="cosx">
+        </div>
       </div>
     </div>
 
+    <div class="right-column">
+      <div class="card">
+        <div class="front">
+          <img src="power_rule_front.png" alt="Power Rule">
+        </div>
+        <div class="back">
+          <img src="power_rule_back.png" alt="Power Rule">
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="front">
+          <img src="tanx_front.png" alt="d/dx(tanx)">
+        </div>
+        <div class="back">
+          <img src="tanx_back.png" alt="sec^2*x">
+        </div>
+      </div>
+    </div>
   </body>
-
 </html>
