Added page header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+
+    <h1> Calculus Derivative Rules </h1>
+    <p> (Click cards to flip) </p>
+
     <div class="left-column">
       <div class="card">
         <div class="front">
