--- a/index.html
+++ b/index.html
@@ -55,5 +55,55 @@
         </div>
       </div>
     </div>
+
+    <hr>
+
+    <div class="answer-section">
+      <h1> Test Yourself </h1>
+      <p class="question">1.) What is the the trig identity of d/dx f(cosx)</p>
+      <ul class="possible-answers">
+        <input type="radio" name="1">cosx</label><br/>
+        <input type="radio" name="1">sec^2(x)</label><br/>
+        <input type="radio" name="1">-sinx</label><br/>
+        <input type="radio" name="1">n(x^(n-1))</label><br/>
+      </ul>
+
+      <p class="question">2.) What is the the trig identity of d/dx f(sinx)</p>
+      <ul class="possible-answers">
+        <input type="radio" name="2">cosx</label><br/>
+        <input type="radio" name="2">sec^2(x)</label><br/>
+        <input type="radio" name="2">-sinx</label><br/>
+        <input type="radio" name="2">n(x^(n-1))</label><br/>
+      </ul>
+
+      <p class="question">3.) What is the the trig identity of d/dx f(x^n)</p>
+      <ul class="possible-answers">
+        <input type="radio" name="3">cosx</label><br/>
+        <input type="radio" name="3">sec^2(x)</label><br/>
+        <input type="radio" name="3">-sinx</label><br/>
+        <input type="radio" name="3">n(x^(n-1))</label><br/>
+      </ul>
+
+      <p class="question">4.) What is the the trig identity of d/dx f(tanx)</p>
+      <ul class="possible-answers">
+        <input type="radio" name="4">cosx</label><br/>
+        <input type="radio" name="4">sec^2(x)</label><br/>
+        <input type="radio" name="4">-sinx</label><br/>
+        <input type="radio" name="4">n(x^(n-1))</label><br/>
+      </ul>
+
+      <div class="submit-button">
+        <button id="btnSubmit" type="submit">Check Answers</button>
+      </div>
+
+      <div class="answers">
+        <p> The answer to question 1 is -sinx </p>
+        <p> The answer to question 2 is cosx </p>
+        <p> The answer to question 3 is n(x^(n-1)) </p>
+        <p> The answer to question 4 is sec^2(x) </p>
+      </div>
+
+    </div>
+
   </body>
 </html>
